# pwr-bot

./: .env-example  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  dev.sh  docker-compose.yml  package-lock.json  tmp-view-architecture.md  version.json
.archive/sqlx/: 20250801211447_initial_setup.down.sql  20250801211447_initial_setup.up.sql  20251229162924_add_server_settings.down.sql  20260101142657_break_feed_url.down.sql  20260105094744_add_voice_sessions.down.sql  20260211053856_nest_settings_by_feature.up.sql  20260220065439_add_voice_sessions_partner_idx.down.sql  20260220074756_add_bot_meta.up.sql  20260223040550_add_voice_sessions_is_active.down.sql  20260223040550_add_voice_sessions_is_active.up.sql
.github/: .config.js  .pre-commit.js
.github/workflows/: _build-multi.yml  _pr-checks.yml  _release.yml  autopromote.yml  build.yml  pull-request.yml  release.yml
.opencode/plans/: diesel_migration.md
data/: data.db
docs/: architecture.md
docs/diagrams/: architecture-layers.mmd  architecture-patterns.mmd  architecture-view-flow.mmd  architecture-view-lifecycle.mmd  architecture-view-uml.mmd  view-lifecycle.mmd  view-routes.mmd  view-uml.mmd
migrations/: 20250801211447_initial_setup.down.sql  20250801211447_initial_setup.up.sql  20250801212602_refactor.down.sql  20250801212602_refactor.up.sql  20250827224442_rename-subscribers-cols.down.sql  20250827224442_rename-subscribers-cols.up.sql  20251229162924_add_server_settings.up.sql  20260101142657_break_feed_url.down.sql  20260101142657_break_feed_url.up.sql  20260105094744_add_voice_sessions.up.sql  20260211053856_nest_settings_by_feature.down.sql  20260220065439_add_voice_sessions_partner_idx.up.sql  20260220074756_add_bot_meta.down.sql
migrations/2026-04-29-122252-0000_initial_schema/: down.sql  up.sql
scripts/: cleanup_voice_sessions.sql  migrate.py
src/: bot.rs  config.rs  database.rs  entity.rs  error.rs  event.rs  feed.rs  lib.rs  logging.rs  macros.rs  main.rs  model.rs  repository.rs  service.rs  subscriber.rs
src/action/: action.rs  discord_webhook_action.rs  mod.rs
src/bot/: bot.rs  checks.rs  commands.rs  components.rs  controller.rs  coordinator.rs  error.rs  error_handler.rs  mod.rs  navigation.rs  utils.rs  views.rs
src/database/: database.rs  error.rs  mod.rs  model.rs  table.rs
src/event/: anime_update_event.rs  event.rs  event_bus.rs  feed_update.rs  feed_update_event.rs  manga_update_event.rs  mod.rs  new_chapter_event.rs  new_episode_event.rs  new_event.rs  series_update_event.rs  update_event.rs  update_publisher.rs
src/feed/: anilist_feed.rs  anilist_platform.rs  anilist_series_feed.rs  comick_platform.rs  (+9 more)
tests/: common.rs  config_test.rs  database_test.rs  db_table.rs  db_table_test.rs  event_bus_test.rs  feed_subscription_service.rs  feed_subscription_service_test.rs  mock_platforms.rs  mock_platforms_test.rs  publisher_subscriber.rs  publisher_subscriber_test.rs  service_test.rs  source_test.rs  stats_chart_test.rs  voice_heartbeat.rs  voice_heartbeat_test.rs  voice_leaderboard_test.rs  voice_tracking_service.rs  voice_tracking_service_test.rs
(+190 files in other folders)
