[package]
name = "pwr-bot"


version = "0.1.9"


edition = "2024"

[lints.clippy]
new_without_default = "allow"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
chrono = "0.4.41"
dotenv = "0.15.0"
poise = { git = "https://github.com/serenity-rs/poise", branch = "serenity-next" }
reqwest = { version = "0.12.22", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.140"
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next" }
sqlx = { version = "0.8.6", features = ["chrono", "runtime-tokio", "sqlite"] }
tokio = { version = "1.46.1", features = ["rt-multi-thread", "macros", "signal"] }
futures = "0.3.30"
log = "0.4.22"
env_logger = "0.11.2"
thiserror = "2.0.12"
uuid = "1.17.0"
governor = "0.10.0"

[dev-dependencies]
httpmock = "0.7.0"
