[package]
name = "pwr-bot"


version = "0.1.23"


edition = "2024"

[lints.clippy]
new_without_default = "allow"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
chrono = "0.4.41"
dotenv = "0.15.0"
poise = { git = "https://github.com/serenity-rs/poise", branch = "serenity-next" }
reqwest = { version = "0.12.22", default-features = false, features = ["rustls-tls", "json"] }
serde = "1.0.219"
serde_json = "1.0.140"
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next" }
sqlx = { version = "0.8.6", features = ["chrono", "runtime-tokio", "sqlite"] }
tokio = { version = "1.46.1", features = ["rt-multi-thread", "macros", "signal"] }
futures = "0.3.30"
log = "0.4.22"
thiserror = "2.0.12"
uuid = { version = "1.17.0", features = ["v4"] }
governor = "0.10.0"
tracing-appender = "0.2.4"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
wreq = "5.3.0"
wreq-util = "2.2.6"

[dev-dependencies]
httpmock = "0.7.0"
mockall = "0.13.0"
