[package]
name = "pwr-bot"


version = "0.1.0"


edition = "2024"

[lints.clippy]
new_without_default = "allow"

[dependencies]
anyhow = "1.0.101"
async-trait = "0.1.89"
chrono = "0.4.43"
dotenv = "0.15.0"
poise = { git = "https://github.com/serenity-rs/poise", branch = "serenity-next" }
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls", "json"] }
serde = "1.0.228"
serde_json = "1.0.149"
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next" }
sqlx = { version = "0.8.6", features = ["chrono", "runtime-tokio", "sqlite"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "signal"] }
futures = "0.3.32"
log = "0.4.29"
thiserror = "2.0.18"
uuid = { version = "1.21.0", features = ["v4"] }
governor = "0.10.4"
tracing-appender = "0.2.4"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
wreq = "5.3.0"
wreq-util = "2.2.6"
image = "0.25"
ab_glyph = "0.2"
html2md = "0.2.15"
sysinfo = "0.33"
derive_builder = "0.20.2"
contribution-grid = "2.0.1"
minijinja = "2.15.1"
base64 = "0.22.1"
resvg = "0.47.0"

[dev-dependencies]
httpmock = "0.7.0"
mockall = "0.13.1"
serial_test = "3.3.1"
